[tool.poetry]
name = "hello-world-flask"
version = "0.1.0"
description = ""
authors = ["HyperDX <support@hyperdx.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
hyperdx-opentelemetry = {path = "../../", develop = true}
opentelemetry-api = "^1.18.0"
opentelemetry-instrumentation-requests = "0.39b0"
opentelemetry-instrumentation-flask = "0.39b0"
opentelemetry-instrumentation-urllib = "0.39b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
