[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = ""
authors = ["HyperDX <support@hyperdx.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
hyperdx-opentelemetry = {path = "../../", develop = true}
opentelemetry-api = "^1.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
